add first article

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://francis-liberty.github.io
-title: 仁
-subtitle: Yet Another Blog.
+title: 仁/Ren
+subtitle: A programmer for China
 author: Francis Chan (Shuo Chen)
 simple_search: https://www.google.com/search
 description:
